--- a/renderer/index.html
+++ b/renderer/index.html
@@ -28,15 +28,6 @@
         </header>
 
         <main class="main">
-            <div class="status-card" id="downloaderStatus">
-                <div class="status-icon">
-                    <i class="fas fa-cog fa-spin"></i>
-                </div>
-                <div class="status-content">
-                    <div class="status-indicator" id="statusIndicator"></div>
-                    <span id="statusText">Checking downloader...</span>
-                </div>
-            </div>
 
             <form class="download-form" id="downloadForm">
                 <div class="input-group">
@@ -75,7 +66,7 @@
                     </div>
                 </div>
 
-                <button type="submit" id="downloadBtn" class="download-btn" disabled>
+                <button type="submit" id="downloadBtn" class="download-btn">
                     <div class="btn-content">
                         <i class="fas fa-download"></i>
                         <span class="btn-text">Download Music</span>
